# src/routes/categories.routes.ts
@@ -1,9 +1,9 @@
 import { Router } from 'express'
 import multer from 'multer'
 
-import createCategoryController from '../modules/cars/useCases/createCategory'
-import importCategoryController from '../modules/cars/useCases/importCategory'
-import listCategoriesController from '../modules/cars/useCases/listCategories'
+import { CreateCategoryController } from '../modules/cars/useCases/createCategory/CreateCategoryController'
+import { ImportCategoryController } from '../modules/cars/useCases/importCategory/ImportCategoryController'
+import { ListCategoriesController } from '../modules/cars/useCases/listCategories/ListCategoriesController'
 
 const categoriesRoutes = Router()
 // passar qual o destino onde vai ser salvo, usa-lo como middleware
@@ -11,17 +11,19 @@ const upload = multer({
   dest: './tmp',
 })
 
+const createCategoryController = new CreateCategoryController()
+const importCategoryController = new ImportCategoryController()
+const listCategoriesController = new ListCategoriesController()
+
 // barra se referencia ao /categories
-categoriesRoutes.post('/', (req, res) =>
-  createCategoryController().handle(req, res),
-)
+categoriesRoutes.post('/', createCategoryController.handle)
 // responsavel por pegar e listar os objetos do banco de dados
-categoriesRoutes.get('/', (req, res) =>
-  listCategoriesController().handle(req, res),
-)
+categoriesRoutes.get('/', listCategoriesController.handle)
 // passa o middleware e falar que vai ser importado apenas um arquivo e passado o nome do arquivo
-categoriesRoutes.post('/import', upload.single('file'), (req, res) =>
-  importCategoryController().handle(req, res),
+categoriesRoutes.post(
+  '/import',
+  upload.single('file'),
+  importCategoryController.handle,
 )
 
 export { categoriesRoutes }
