# src/routes/specification.routes.ts
@@ -1,11 +1,11 @@
 import { Router } from 'express'
 
-import { createSpecificationController } from '../modules/cars/useCases/createSpecification'
+import { CreateSpecificationController } from '../modules/cars/useCases/createSpecification/CreateSpecificationController'
 
 const specificationRoutes = Router()
 
-specificationRoutes.post('/', (req, res) =>
-  createSpecificationController.handle(req, res),
-)
+const createSpecificationController = new CreateSpecificationController()
+
+specificationRoutes.post('/', createSpecificationController.handle)
 
 export { specificationRoutes }
